fix: Scrollbars all over the place! (at least on Windows and Linux).

--- a/src/kc_angular/src/app/components/knowledge-source-components/ks-info/ks-info.component.scss
+++ b/src/kc_angular/src/app/components/knowledge-source-components/ks-info/ks-info.component.scss
@@ -19,5 +19,6 @@
   width: 100%;
   padding: 10px;
   max-height: 100%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
